...
            "state" : "translated",
            "value" : "Alle Kategorien"
          }
        }
      }
    },
    "All channels" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Alle Sender"
          }
...
            "state" : "translated",
            "value" : "und gib ein"
          }
        }
      }
    },
    "Audio" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Audio"
          }
...
            "state" : "translated",
            "value" : "Statistik löschen?"
          }
        }
      }
    },
    "Close" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Schließen"
          }
...
            "state" : "translated",
            "value" : "Favorit"
          }
        }
      }
    },
    "Favourites" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Favoriten"
          }
...
            "state" : "translated",
            "value" : "Mediathek"
          }
        }
      }
    },
    "Live" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Live"
          }
...
            "state" : "translated",
            "value" : "Passwort"
          }
        }
      }
    },
    "Pause" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Pause"
          }
...
            "state" : "translated",
            "value" : "Bild-in-Bild"
          }
        }
      }
    },
    "Play" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Abspielen"
          }
...
            "state" : "translated",
            "value" : "Zuletzt hinzugefügt"
          }
        }
      }
    },
    "Recently watched" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Zuletzt gesehen"
          }
...
            "state" : "translated",
            "value" : "Simkls Trends und Bestenlisten anzeigen"
          }
        }
      }
    },
    "Show stream" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Stream zeigen"
...
            "state" : "translated",
            "value" : "Startsender"
          }
        }
      }
    },
    "Stop" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Stoppen"
...
            "state" : "translated",
            "value" : "Aktualisierung stoppen"
          }
        }
      }
    },
    "Subtitles" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Untertitel"
          }
...
            "state" : "translated",
            "value" : "Wird beim nächsten Öffnen von Panop aktiv."
          }
        }
      }
    },
    "TV Guide" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "TV-Programm"
          }
...
            "state" : "translated",
            "value" : "Benutzername"
          }
        }
      }
    },
    "Version" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Version"
          }
...
